@@ -368,7 +368,10 @@ public class VelocityResponseWriter implements QueryResponseWriter, SolrCoreAwar
     @Override
     protected ResourceBundle getBundle(String baseName, Object loc) {
       // resource bundles for this tool must be in velocity "package"
-      return ResourceBundle.getBundle("velocity." + baseName, getLocale(), solrClassLoader);
+      return ResourceBundle.getBundle(
+          "velocity." + baseName,
+          (loc == null) ? this.getLocale() : this.toLocale(loc),
+          solrClassLoader);
     }
 
     // Why did Velocity Tools make this private?  Copied from ResourceTools.java
