@@ -184,6 +184,9 @@ Bug Fixes
 * SOLR-7990: Use of timeAllowed can cause incomplete filters to be cached and incorrect
   results to be returned on subsequent requests. (Erick Erickson, yonik)
 
+* SOLR-8041: Fix VelocityResponseWriter's $resource.get(key,baseName,locale) to use specified locale.
+  (Erik Hatcher)
+
 ==================  5.3.0 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
